--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "autoprefixer": "6.7.2",
     "babel-core": "^6.20.0",
     "babel-loader": "^6.2.9",
-    "babel-runtime": "^6.20.0",
     "babel-plugin-add-module-exports": "0.2.1",
     "babel-plugin-react-require": "3.0.0",
     "babel-preset-es2015": "6.18.0",
     "babel-preset-react": "6.11.1",
     "babel-preset-stage-0": "6.16.0",
+    "babel-runtime": "^6.20.0",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
     "connect-history-api-fallback": "1.3.0",
@@ -27,10 +27,12 @@
     "fs-extra": "0.30.0",
     "html-webpack-plugin": "2.24.0",
     "http-proxy-middleware": "0.17.3",
+    "is-plain-object": "^2.0.1",
     "json-loader": "0.5.4",
     "postcss-loader": "1.2.2",
     "react-dev-utils": "^0.5.2",
     "style-loader": "0.13.1",
+    "svg-sprite-loader": "^2.0.1",
     "url-loader": "0.5.7",
     "webpack": "1.14.0",
     "webpack-dev-server": "1.16.2",
@@ -38,5 +40,5 @@
   },
   "optionalDependencies": {
     "fsevents": "1.0.17"
-  }  
+  }
 }
