--- a/package.json
+++ b/package.json
@@ -6,36 +6,34 @@
   "author": "codering <zcodeworld@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "autoprefixer": "6.7.2",
-    "babel-core": "^6.20.0",
-    "babel-loader": "^6.2.9",
+    "autoprefixer": "7.1.1",
+    "babel-core": "6.24.1",
+    "babel-loader": "7.0.0",
     "babel-plugin-add-module-exports": "0.2.1",
     "babel-plugin-react-require": "3.0.0",
-    "babel-preset-es2015": "6.18.0",
-    "babel-preset-react": "6.11.1",
-    "babel-preset-stage-0": "6.16.0",
-    "babel-runtime": "^6.20.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
+    "babel-runtime": "6.23.0",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
-    "connect-history-api-fallback": "1.3.0",
-    "cross-spawn": "4.0.2",
-    "css-loader": "0.26.1",
-    "detect-port": "1.1.1",
-    "dotenv": "2.0.0",
-    "extract-text-webpack-plugin": "1.0.1",
-    "file-loader": "0.10.0",
-    "fs-extra": "0.30.0",
-    "html-webpack-plugin": "2.24.0",
-    "http-proxy-middleware": "0.17.3",
+    "css-loader": "0.28.1",
+    "dotenv": "4.0.0",
+    "extract-text-webpack-plugin": "2.1.0",
+    "file-loader": "0.11.1",
+    "fs-extra": "3.0.1",
+    "html-webpack-plugin": "2.28.0",
     "is-plain-object": "^2.0.1",
-    "json-loader": "0.5.4",
-    "postcss-loader": "1.2.2",
-    "react-dev-utils": "^0.5.2",
-    "style-loader": "0.13.1",
-    "svg-sprite-loader": "^2.0.1",
-    "url-loader": "0.5.7",
-    "webpack": "1.14.0",
-    "webpack-dev-server": "1.16.2",
+    "object-assign": "4.1.1",
+    "postcss-flexbugs-fixes": "3.0.0",
+    "postcss-loader": "2.0.5",
+    "react-dev-utils": "^2.0.0",
+    "react-error-overlay": "^1.0.5",
+    "style-loader": "0.17.0",
+    "sw-precache-webpack-plugin": "0.9.1",
+    "url-loader": "0.5.8",
+    "webpack": "2.5.1",
+    "webpack-dev-server": "2.4.5",
     "webpack-manifest-plugin": "1.1.0"
   },
   "optionalDependencies": {
