--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "autoprefixer": "7.1.1",
+    "awesome-typescript-loader": "3.1.3",
     "babel-core": "6.24.1",
     "babel-loader": "7.0.0",
     "babel-plugin-add-module-exports": "0.2.1",
@@ -24,15 +25,18 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.28.0",
     "is-plain-object": "^2.0.1",
+    "less": "2.7.2",
+    "less-loader": "4.0.3",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.0.0",
     "postcss-loader": "2.0.5",
-    "react-dev-utils": "^2.0.0",
-    "react-error-overlay": "^1.0.5",
+    "react-dev-utils": "2.0.1",
+    "react-error-overlay": "1.0.6",
     "style-loader": "0.17.0",
+    "svg-sprite-loader": "0.3.1",
     "sw-precache-webpack-plugin": "0.9.1",
     "url-loader": "0.5.8",
-    "webpack": "2.5.1",
+    "webpack": "2.6.0",
     "webpack-dev-server": "2.4.5",
     "webpack-manifest-plugin": "1.1.0"
   },
