--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.0.0",
     "postcss-loader": "2.0.5",
-    "react-dev-utils": "2.0.1",
-    "react-error-overlay": "1.0.6",
+    "react-dev-utils": "^3.0.0",
+    "react-error-overlay": "^1.0.7",
     "style-loader": "0.17.0",
     "svg-sprite-loader": "0.3.1",
     "sw-precache-webpack-plugin": "0.9.1",
     "url-loader": "0.5.8",
-    "webpack": "2.6.0",
+    "webpack": "2.6.1",
     "webpack-dev-server": "2.4.5",
     "webpack-manifest-plugin": "1.1.0"
   },
