--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "autoprefixer": "7.1.1",
     "awesome-typescript-loader": "3.1.3",
     "babel-core": "6.25.0",
-    "babel-loader": "7.0.0",
+    "babel-loader": "7.1.1",
     "babel-plugin-add-module-exports": "0.2.1",
     "babel-plugin-react-require": "3.0.0",
     "babel-preset-es2015": "6.24.1",
@@ -29,7 +29,7 @@
     "chalk": "1.1.3",
     "css-loader": "0.28.4",
     "dotenv": "4.0.0",
-    "extract-text-webpack-plugin": "2.1.2",
+    "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "0.11.2",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
@@ -39,15 +39,17 @@
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.0.0",
     "postcss-loader": "2.0.6",
+    "promise": "8.0.1",
     "react-dev-utils": "^3.0.2",
     "react-error-overlay": "^1.0.9",
     "style-loader": "0.18.2",
     "svg-sprite-loader": "0.3.1",
-    "sw-precache-webpack-plugin": "0.11.3",
+    "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.5.9",
-    "webpack": "2.6.1",
-    "webpack-dev-server": "2.5.0",
-    "webpack-manifest-plugin": "1.1.0"
+    "webpack": "3.4.0",
+    "webpack-dev-server": "2.6.1",
+    "webpack-manifest-plugin": "1.2.1",
+    "whatwg-fetch": "2.0.3"
   },
   "optionalDependencies": {
     "fsevents": "1.1.2"
