--- a/package.json
+++ b/package.json
@@ -1,50 +1,36 @@
 {
   "name": "dopey",
-  "version": "0.0.12",
+  "version": "1.0.0-bata1",
   "bin": "bin/dopey.js",
   "repository": "git@github.com:codering/dopey.git",
   "author": "codering <zcodeworld@gmail.com>",
   "license": "MIT",
-  "scripts": {
-    "precommit": "lint-staged"
-  },
-  "lint-staged": {
-    "{bin,config,scripts,utils}/**/*.{js,jsx,json,css}": [
-      "prettier --single-quote --write",
-      "git add"
-    ]
-  },
   "dependencies": {
     "autoprefixer": "7.1.2",
-    "awesome-typescript-loader": "3.1.3",
     "babel-core": "6.25.0",
+    "babel-jest": "20.0.3",
     "babel-loader": "7.1.1",
-    "babel-plugin-add-module-exports": "0.2.1",
-    "babel-plugin-react-require": "3.0.0",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-react": "6.24.1",
-    "babel-preset-stage-0": "6.24.1",
-    "babel-runtime": "6.23.0",
+    "babel-preset-react-app": "^3.0.2",
+    "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "cross-env": "5.0.5",
     "css-loader": "0.28.4",
     "dotenv": "4.0.0",
     "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "0.11.2",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
-    "is-plain-object": "^2.0.1",
+    "jest": "20.0.4",
     "less": "2.7.2",
     "less-loader": "4.0.5",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
+    "postcss-px2rem": "0.3.0",
     "promise": "8.0.1",
-    "react-dev-utils": "^3.0.2",
-    "react-error-overlay": "^1.0.9",
+    "react-dev-utils": "^4.0.1",
     "style-loader": "0.18.2",
-    "svg-sprite-loader": "0.3.1",
-    "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.5.9",
     "webpack": "3.5.1",
     "webpack-dev-server": "2.7.1",
@@ -53,10 +39,5 @@
   },
   "optionalDependencies": {
     "fsevents": "1.1.2"
-  },
-  "devDependencies": {
-    "husky": "^0.14.1",
-    "lint-staged": "^4.0.0",
-    "prettier": "^1.5.2"
   }
 }
